# fuel-network

./: .gitignore  README  README.md
counter/: .gitignore  Cargo.toml  Forc.toml  README.md
counter-indexer/: .gitignore  Cargo.toml  README.md  counter_indexer.wasm  manifest.yaml  wasm_clip.sh
counter-indexer/abi/: counter-abi.json
counter-indexer/schema/: schema.graphql
counter-indexer/src/: lib.rs
counter-rust/: Cargo.toml
counter-rust/src/: main.rs
counter/src/: abi.sw  errors.sw  interface.sw  main.sw
counter/tests/: harness.rs  setup.rs
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/contracts/: CounterAbi.d.ts  index.ts
frontend/src/contracts/factories/: CounterAbi__factory.ts
indexer/: README.md  counter-index.manifest.yml
indexer/counter-index/: Cargo.toml
indexer/counter-index/src/: lib.rs
indexer/schema/: schema.graphql
