[package]
name = "counter-rust"
version = "0.0.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
fuels-core = "0.31.1"
fuels = "0.31.1"
fuels-abigen-macro = "0.31.1"
rand = "0.8"
